# fraud_detection

./: App.spec  README.md  anomaly_detector.py  data_generator.py  data_processor.py  feature_analyzer.py  launcher.py  main.py  model_updater.py  progress_bar.py  pyproject.toml  risk_evaluator.py
APP/: README.md  head.py  requirements.txt  visualizer.py  快速使用指南.md  系统使用说明.md  系统架构说明.md  项目交付说明.md  项目完成总结.md
APP/.streamlit/: config.toml
APP/pages/: __init__.py  data_analyzer_app.py  home.py  model_updater.py  model_updater_app.py  system_management.py  users_data_app.py
fraud-detection-system/: main.py
fraud-detection-system/analysis/: anomaly_probability.py  behavior_consistency.py  risk_calculator.py  temporal_offset.py
fraud-detection-system/data/: data_loader.py  data_preprocessor.py  time_window_processor.py
fraud-detection-system/features/: feature_extractor.py
fraud-detection-system/models/: detection_model.py  model_updater.py
fraud-detection-system/pipeline/: detection_pipeline.py
