[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pyinstaller>=6.16.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "streamlit-option-menu>=0.4.0",
]
